test/errors/err2.qk
func
	println("Say hello!")
end

func main()
	sayHello()
end
